tests/rosetta/transpiler/C/bitmap-read-a-ppm-file.error
compile failed: exit status 1: /tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c: In function ‘_mem’:
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:91:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   91 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c: At top level:
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:113:10: error: expected identifier or ‘(’ before ‘[’ token
  113 |     Pixel[] *data;
      |          ^
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c: In function ‘newBitmap’:
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:149:51: warning: passing argument 1 of ‘list_append_int_new’ from incompatible pointer type [-Wincompatible-pointer-types]
  149 |                         row = list_append_int_new(row, row_len, (Pixel){.R = 0LL, .G = 0LL, .B = 0LL});
      |                                                   ^~~
      |                                                   |
      |                                                   Pixel *
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:41:44: note: expected ‘const int *’ but argument is of type ‘Pixel *’
   41 | static int* list_append_int_new(const int *arr, size_t len, int val) {
      |                                 ~~~~~~~~~~~^~~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:149:72: error: incompatible type for argument 3 of ‘list_append_int_new’
  149 |                         row = list_append_int_new(row, row_len, (Pixel){.R = 0LL, .G = 0LL, .B = 0LL});
      |                                                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                                        |
      |                                                                        Pixel
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:41:65: note: expected ‘int’ but argument is of type ‘Pixel’
   41 | static int* list_append_int_new(const int *arr, size_t len, int val) {
      |                                                             ~~~~^~~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:152:35: warning: passing argument 1 of ‘list_append_strptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  152 |         rows = list_append_strptr(rows, &rows_len, row);
      |                                   ^~~~
      |                                   |
      |                                   Pixel **
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:55:55: note: expected ‘const char ***’ but argument is of type ‘Pixel **’
   55 | static const char*** list_append_strptr(const char ***arr, size_t *len, const char **val) {
      |                                         ~~~~~~~~~~~~~~^~~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:152:52: warning: passing argument 3 of ‘list_append_strptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  152 |         rows = list_append_strptr(rows, &rows_len, row);
      |                                                    ^~~
      |                                                    |
      |                                                    Pixel *
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:55:86: note: expected ‘const char **’ but argument is of type ‘Pixel *’
   55 | static const char*** list_append_strptr(const char ***arr, size_t *len, const char **val) {
      |                                                                         ~~~~~~~~~~~~~^~~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:152:14: warning: assignment to ‘Pixel **’ from incompatible pointer type ‘const char ***’ [-Wincompatible-pointer-types]
  152 |         rows = list_append_strptr(rows, &rows_len, row);
      |              ^
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:156:50: error: ‘Bitmap’ has no member named ‘data’
  156 |     return (Bitmap){.w = w, .h = h, .max = max, .data = rows, .data_len = rows_len};
      |                                                  ^~~~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:156:57: warning: initialization of ‘long unsigned int’ from ‘Pixel **’ makes integer from pointer without a cast [-Wint-conversion]
  156 |     return (Bitmap){.w = w, .h = h, .max = max, .data = rows, .data_len = rows_len};
      |                                                         ^~~~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:156:57: note: (near initialization for ‘(anonymous).data_len’)
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c: In function ‘setPx’:
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:160:21: error: ‘Bitmap’ has no member named ‘data’
  160 |     Pixel **rows = b.data;
      |                     ^
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:162:27: error: ‘Bitmap’ has no member named ‘data_lens’; did you mean ‘data_len’?
  162 |     size_t *rows_lens = b.data_lens;
      |                           ^~~~~~~~~
      |                           data_len
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:168:6: error: ‘Bitmap’ has no member named ‘data’
  168 |     b.data = rows;
      |      ^
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c: In function ‘getPx’:
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:172:13: error: ‘Bitmap’ has no member named ‘data’
  172 |     return b.data[(int)(y)][(int)(x)];
      |             ^
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c: In function ‘splitLines’:
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:181:18: warning: implicit declaration of function ‘substr’; did you mean ‘strstr’? [-Wimplicit-function-declaration]
  181 |         int ch = substr(s, i, i + 1LL);
      |                  ^~~~~~
      |                  strstr
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:182:20: warning: passing argument 1 of ‘strcmp’ makes pointer from integer without a cast [-Wint-conversion]
  182 |         if (strcmp(ch, "\n") == 0) {
      |                    ^~
      |                    |
      |                    int
In file included from /tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:3:
/usr/include/string.h:156:32: note: expected ‘const char *’ but argument is of type ‘int’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                    ~~~~~~~~~~~~^~~~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:186:35: warning: passing argument 2 of ‘str_concat’ makes pointer from integer without a cast [-Wint-conversion]
  186 |             cur = str_concat(cur, ch);
      |                                   ^~
      |                                   |
      |                                   int
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:11:52: note: expected ‘const char *’ but argument is of type ‘int’
   11 | static char* str_concat(const char *a, const char *b) {
      |                                        ~~~~~~~~~~~~^
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c: In function ‘splitWS’:
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:201:23: warning: passing argument 1 of ‘strcmp’ makes pointer from integer without a cast [-Wint-conversion]
  201 |         if ((((strcmp(ch, " ") == 0) || (strcmp(ch, "\t") == 0)) || (strcmp(ch, "
      |                       ^~
      |                       |
      |                       int
/usr/include/string.h:156:32: note: expected ‘const char *’ but argument is of type ‘int’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                    ~~~~~~~~~~~~^~~~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:201:49: warning: passing argument 1 of ‘strcmp’ makes pointer from integer without a cast [-Wint-conversion]
  201 |         if ((((strcmp(ch, " ") == 0) || (strcmp(ch, "\t") == 0)) || (strcmp(ch, "
      |                                                 ^~
      |                                                 |
      |                                                 int
/usr/include/string.h:156:32: note: expected ‘const char *’ but argument is of type ‘int’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                    ~~~~~~~~~~~~^~~~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:201:81: warning: missing terminating " character
  201 |         if ((((strcmp(ch, " ") == 0) || (strcmp(ch, "\t") == 0)) || (strcmp(ch, "
      |                                                                                 ^
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:201:81: error: missing terminating " character
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:202:27: error: stray ‘\’ in program
  202 | ") == 0)) || (strcmp(ch, "\n") == 0)) {
      |                           ^
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:202:27: error: expected ‘)’ before ‘n’
  202 | ") == 0)) || (strcmp(ch, "\n") == 0)) {
      |                           ^~
      |                           )
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:201:76: note: to match this ‘(’
  201 |         if ((((strcmp(ch, " ") == 0) || (strcmp(ch, "\t") == 0)) || (strcmp(ch, "
      |                                                                            ^
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:202:29: warning: missing terminating " character
  202 | ") == 0)) || (strcmp(ch, "\n") == 0)) {
      |                             ^
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:202:29: error: missing terminating " character
  202 | ") == 0)) || (strcmp(ch, "\n") == 0)) {
      |                             ^~~~~~~~~~~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:201:77: warning: passing argument 1 of ‘strcmp’ makes pointer from integer without a cast [-Wint-conversion]
  201 |         if ((((strcmp(ch, " ") == 0) || (strcmp(ch, "\t") == 0)) || (strcmp(ch, "
      |                                                                             ^~
      |                                                                             |
      |                                                                             int
/usr/include/string.h:156:32: note: expected ‘const char *’ but argument is of type ‘int’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                    ~~~~~~~~~~~~^~~~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:206:14: error: expected ‘)’ before ‘}’ token
  206 |             }
      |              ^
      |              )
  207 |         } else {
      |         ~     
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:201:69: note: to match this ‘(’
  201 |         if ((((strcmp(ch, " ") == 0) || (strcmp(ch, "\t") == 0)) || (strcmp(ch, "
      |                                                                     ^
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:206:14: error: expected ‘)’ before ‘}’ token
  206 |             }
      |              ^
      |              )
  207 |         } else {
      |         ~     
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:201:13: note: to match this ‘(’
  201 |         if ((((strcmp(ch, " ") == 0) || (strcmp(ch, "\t") == 0)) || (strcmp(ch, "
      |             ^
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:206:14: error: expected ‘)’ before ‘}’ token
  206 |             }
      |              ^
      |              )
  207 |         } else {
      |         ~     
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:201:12: note: to match this ‘(’
  201 |         if ((((strcmp(ch, " ") == 0) || (strcmp(ch, "\t") == 0)) || (strcmp(ch, "
      |            ^
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:207:9: error: expected expression before ‘}’ token
  207 |         } else {
      |         ^
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:207:11: error: ‘else’ without a previous ‘if’
  207 |         } else {
      |           ^~~~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:208:35: error: ‘ch’ undeclared (first use in this function)
  208 |             cur = str_concat(cur, ch);
      |                                   ^~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:208:35: note: each undeclared identifier is reported only once for each function it appears in
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c: At top level:
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:212:5: error: expected identifier or ‘(’ before ‘if’
  212 |     if (strlen(cur) > 0LL) {
      |     ^~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:215:5: error: expected identifier or ‘(’ before ‘return’
  215 |     return splitWS_len = out_len, out;
      |     ^~~~~~
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:216:1: error: expected identifier or ‘(’ before ‘}’ token
  216 | }
      | ^
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c: In function ‘tokenize’:
/tmp/ctranspile3930326429/bitmap-read-a-ppm-file.mochi.c:247:45: warning: passing argument 1 of ‘strcmp’ makes pointer from integer without a cast [-Wint-conversion]
  247 |         if ((strlen(line) > 0LL) && (strcmp(substr(line, 0LL, 1LL), "#") == 0)) {
      |                                             ^~~~~~~~~~~~~~~~~~~~~~
      |                                             |
      |                                             int
/usr/include/string.h:156:32: note: expected ‘const char *’ but argument is of type ‘int’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                    ~~~~~~~~~~~~^~~~

